# ros_study

./: .gitignore  README.md
(ignore)publisher_subscriber_pkg/: CMakeLists.txt  README.md
(ignore)publisher_subscriber_pkg/src/: listener.cpp  talker.cpp
ROS_basics_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
ROS_basics_ws/devel/include/publisher_subscriber/: MsgTutorial.h
ROS_basics_ws/devel/include/server_client/: SrvTutorial.h  SrvTutorialRequest.h  SrvTutorialResponse.h
ROS_basics_ws/devel/lib/joint_state_publisher/: joint_state_publisher
ROS_basics_ws/devel/lib/joint_state_publisher_gui/: joint_state_publisher_gui
ROS_basics_ws/devel/lib/learning_tf/: frame_tf_broadcaster  turtle_tf_broadcaster  turtle_tf_listener
ROS_basics_ws/devel/lib/pkgconfig/: joint_state_publisher.pc  joint_state_publisher_gui.pc  learning_tf.pc  publisher_subscriber.pc  rrbot_replica.pc  server_client.pc  testbot_description.pc  urdf_tutorial.pc
ROS_basics_ws/devel/lib/publisher_subscriber/: topic_publisher  topic_subscriber
ROS_basics_ws/devel/lib/server_client/: client  server
ROS_basics_ws/devel/lib/testbot_description/: parser
ROS_basics_ws/devel/share/learning_tf/cmake/: learning_tfConfig.cmake
ROS_basics_ws/src/learning_tf/: CMakeLists.txt  start_demo.launch
ROS_basics_ws/src/learning_tf/src/: frame_tf_broadcaster.cpp  turtle_tf_broadcaster.cpp  turtle_tf_listener.cpp
ROS_basics_ws/src/publisher_subscriber/: CMakeLists.txt  README.md  package.xml
ROS_basics_ws/src/publisher_subscriber/src/: topic_publisher.cpp  topic_subscriber.cpp
ROS_basics_ws/src/rrbot_replica/: CMakeLists.txt  README.md
ROS_basics_ws/src/rrbot_replica/config/: rrbot_control.yaml
ROS_basics_ws/src/rrbot_replica/launch/: rrbot_control.launch  rrbot_rviz.launch  rrbot_world.launch
ROS_basics_ws/src/rrbot_replica/src/: joints_control_publisher.py
ROS_basics_ws/src/rrbot_replica/urdf/: rrbot.gazebo  rrbot.xacro
ROS_basics_ws/src/server_client/: CMakeLists.txt  README.md  package.xml
ROS_basics_ws/src/server_client/src/: client.cpp  server.cpp
ROS_basics_ws/src/testbot_description/: CMakeLists.txt  README.md
ROS_basics_ws/src/testbot_description/src/: parser.cpp
ROS_basics_ws/src/urdf_tutorial/: CMakeLists.txt  README.md
ROS_basics_ws/src/urdf_tutorial/rviz/: urdf.rviz
(+27 files in other folders)
